--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,7 @@ spring:
       properties:
         hibernate:
           format_sql: true
+      database-platform: org.hibernate.dialect.H2Dialect
 
     h2:
       console:
@@ -19,3 +20,6 @@ spring:
         settings:
           trace: false
           web-allow-others: false
+
+server:
+  port: 8081
