chore: ignore .env

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ mvnw:Zone.Identifier
 mvnw:Zone.Identifier:Zone.Identifier
 pom.xml:Zone.Identifier
 pom.xml:Zone.Identifier:Zone.Identifier
+
+.env
