--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,4 +6,8 @@ spring:
     jpa:
       open-in-view: false
       hibernate:
-        ddl-auto: validate
+        ddl-auto: create
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+  port: 8081
