--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,25 +1,17 @@
 spring:
-    datasource:
-      url: jdbc:h2:mem:dt2025
-      username: root
-      password:
-    jpa:
-      show-sql: true
-      open-in-view: false
+  datasource:
+      url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+      username: ${PGUSER}
+      password: ${PGPASSWORD}
+  jpa:
+    show-sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: create
+    properties:
       hibernate:
-        ddl-auto: create # validate | update | create | create-drop
-      properties:
-        hibernate:
-          format_sql: true
-      database-platform: org.hibernate.dialect.H2Dialect
-
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
-        settings:
-          trace: false
-          web-allow-others: false
+        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 server:
   port: 8081
